# contr-pretraining

./: .gitignore  README.md  pyproject.toml
conf/accelerate/: deepspeed.yaml
conf/deepspeed/: zero2.json
conf/huggingface/: bert_4hidden_long_seq.json  mini_bert.json  mini_bert_2048.json  mini_bert_4_layers.json  mini_bert_long_seq.json
llava/: arguments.py  constants.py  conversation.py  mm_utils.py  utils.py  wandb_utils.py
llava/dataset/: audio_dataset.py  config.py  dataset_mapping.py  datasets_wrapper.py  organise_wordboundaries.py  utils.py
llava/dataset/custom_dataset/: forced_alignment.py  giga_nwp.py  gigaspeech.py  mls.py  mustc.py  mustc_nwp.py  spoken_squad.py
llava/eval/: eval.py  eval_contrastive.py  evaluator.py  metrics.py  squad_metric.py
llava/eval/utils/: compute_metrics.py  eval_dataloader.py  get_unique_sqas.py
llava/model/: __init__.py  builder.py  llava_arch.py  model_outputs.py  utils.py
llava/model/contrastive/: calculate_contrastive.py  contrastive_forward.py  eval_contrastive.py  prepare_contrastive.py  (+1 more)
llava/train/: llama_flash_attn_monkey_patch.py  llama_xformers_attn_monkey_patch.py  llava_trainer.py  train.py
scripts/data_configs/: giga_asr.yml  giga_nwp.yml  gigaspeech.yml  gigaspeech_1percent.yml  mix.yml  mix_and_meta.yml  mls.yml  mustc.yml  mustc_asr.yml  mustc_asr_1percent.yml  mustc_nwp.yml  mustc_nwp_1percent.yml  spoken_squad.yml
scripts/finetune/: finetune_mixed_tasks_10%.sh  finetune_mixed_tasks_100%.sh  finetune_no_pretraining_100%.sh
scripts/pretrain/: pretrain-asr.sh  pretrain-contr-cos-all+asr.sh  pretrain-contr-cos-all-pos-shift.sh  pretrain-contr-cos-all.sh  pretrain-contr-cos-emb+mixed.sh  pretrain-contr-cos-emb.sh  pretrain-contr-wasser-emb.sh  pretrain-mixed-nwp.sh  pretrain-test.sh
(+19 files in other folders)
