[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llava"
version = "1.2.2.post1"
description = "Towards GPT-4 like large language and visual assistant."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.1.2", "torchvision==0.16.2", "torchaudio==2.1.2", "librosa", "protobuf==4.25.3", "pandas==2.1.2", "wandb",
    "transformers==4.44.0", "tokenizers==0.19.1", "sentencepiece==0.1.99", "shortuuid",
    "accelerate==0.32.1", "peft", "bitsandbytes",
    "pydantic", "markdown2[all]", "numpy", "scikit-learn==1.2.2",
    "gradio==4.16.0", "gradio_client==0.8.1",
    "requests", "httpx==0.24.0", "uvicorn", "fastapi",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13", "tensorboardx==2.6.2.2",
    "jiwer==3.0.4", "evaluate==0.4.2", "nltk==3.8.1", "unbabel-comet==2.2.2", "sacrebleu==2.4.2", "statsmodels==0.14.4", "deepspeed==0.12.6", "ninja", "wandb",
    "geomloss==0.2.6", "datasets==2.20.0"
]

[project.optional-dependencies]
train = ["deepspeed==0.12.6", "ninja", "wandb"]
build = ["build", "twine"]
dev = ["pre-commit", "pdbpp", "py-spy"]

[project.urls]
"Homepage" = "https://llava-vl.github.io"
"Bug Tracker" = "https://github.com/haotian-liu/LLaVA/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
profile="black"
